<resources>
    <string name="app_name">TeddInsight</string>
    <string name="log_in">Log In</string>
    <string name="login_email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_designer">Designer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tasks">Tasks</string>
    <string name="Conversations">Conversations</string>
    <string name="empty_conversatoin">Conversations will appear here</string>
    <string name="initial_upload">0/0 bytes</string>
    <string name="finishing_up_please_wait">Finishing Up, Please Wait !!</string>
    <string name="designs">Designs</string>
    <string name="due_by">Due By:</string>
    <string name="description">Description</string>
    <string name="assigned_on">Assigned On:</string>
    <string name="assigned_by">Assigned By:</string>
    <string name="due_date">Due Date:</string>
    <string name="days_left">Days Left:</string>
    <string name="status">Status:</string>
    <string name="adoi">Add contents to these designs</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="load">Loading Image, Please Wait!</string>
    <string name="email">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="empty_view_home">empty_view_home</string>
    <string name="no_staff">No Staff</string>
    <string name="staffs">Staffs</string>
    <string name="today">Today</string>
    <string name="clipboard_title_copied_message">copied</string>
    <string name="message_message_copied">message copied</string>
    <string name="yesterday">Yesterday</string>
    <string name="loading_image">Loading Image</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="default_notification_channel_id">Main Notifications</string>
    <string name="client_upload">Client Uploads</string>
    <string name="no_client_uploads_yet">No Client Uploads yet</string>
    <string name="no_task_assigned_yet">No task assigned yet</string>
    <string name="content_curator">Content Curator</string>
    <string name="upload_designs">Upload designs</string>
    <string name="client_uploads">Client Uploads</string>
    <string name="new_task_header">New task for %1$s</string>
    <string name="revoke">Revoke App Access</string>
    <string name="enable">Enable App Access</string>
    <string name="salary_month">Salary/mo: %1$s</string>
    <string name="date_employed">Date Employed: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="phone_number">Phone Number: %1$s</string>
    <string name="human_resource">Human Resource</string>
    <string name="staff_info">Staff Info</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_staff_details">Update Staff details</string>
    <string name="teddinsight">TeddInsight</string>
    <string name="title_activity_social_manager">SocialManager</string>
    <string name="social_accounts">Social Accounts</string>
    <string name="social_manager">Social Media Manager</string>
    <string name="select_account_type">Select Account type</string>
    <!--Uncomment this lines to activate twitter sdk-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">EHogqWe6fDAhxkUGM4wEli6la</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">FyMjvsyBlG6eoiQd9NAQuYb40IclWR2YW9XzhmfvqZjuEQ5HoC</string>
    <string name="schedule_post">Schedule Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="account_analytics">Account Analytics</string>
    <string name="date_registered_with_teddinsight">Date registered with Teddinsight</string>
    <string name="followers_as_at_registration">Followers as at registration</string>
    <string name="followers_now">Followers Now</string>
    <string name="follower_growth">Follower growth</string>
    <string name="followers_gained">Followers gained</string>
    <string name="account_growth_percentage">Account Growth Percentage</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="post_now">Post Now</string>
    <string name="post_later">Post Later</string>
    <string name="tap_to_select_post_date_and_time">Tap to select post date and time</string>
    <string name="scheduled_posts">Scheduled Posts</string>
    <string name="no_registered_client">No registered %1$s </string>
    <string name="services_requested">Services Requested</string>
    <string name="service_description">Service Description</string>
    <string name="service_package">Package</string>
    <string name="work_progress">Work Progress</string>
    <string name="no_service_req">No service requested</string>
    <string name="no_jobs_assigned">No jobs assigned</string>
    <string name="no_scheduled_post">No Scheduled Post</string>
    <string name="no_scheduled_post_request">No scheduled post request</string>
    <string name="no_tickets_opened">No opened tickets</string>
    <string name="no_logs">No Logs Yet</string>
    <string name="link_account_to_a_client">Link account to a client</string>
    <string name="no_uploaded_designs">No uploaded designs</string>
    <string name="firstName">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="role">Role</string>
    <string name="post_title_description">Post title/description</string>
    <string name="no_uploads_for_client">You haven\'t uploaded any files for</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">An error occurred</string>
    <string name="drop_new_content">Add a new content...</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="no_notes">No saved notes</string>
    <string name="channel_name">Message Notification</string>
    <string name="channel_description">Notifications which pops up on when events happens on the app</string>
    <string name="created_at">Created on: %s</string>
    <string name="task_count">Tasks : %s</string>
    <string name="calendar_name">Give calendar a name</string>
    <string name="create_calendar">Create Calendar</string>
    <string name="no_calendar_available_for_this_client">No calendar available for this client</string>
    <string name="this_calendar_has_no_task_create_one_now">This calendar has no task, create one now.</string>
    <string name="task_assigned_to">Assigned to : %s</string>
    <string name="client_task_title">Task : %s</string>
    <string name="deadline">Deadline : %s</string>
    <string name="create_new_task">Create New Task</string>
    <string name="task_for">Task for</string>
    <string name="save_task_to_calendar">Add task to calendar</string>
    <string name="view_calendar_report">View calendar report</string>
    <string name="delete_calendar">Delete calendar</string>
    <string name="dispatch_tasks">Dispatch Tasks</string>
    <string name="date_completed">Date Completed: %s</string>
    <string name="assign_on">Assigned On %s</string>
    <string name="tap_here_to_perform_task_now">Tap here to perform task now</string>
</resources>