<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_scheduled"
        android:icon="@drawable/ic_calendar_with_a_clock_time_tools"
        android:title="@string/scheduled_posts" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/tasks" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/Conversations" />

    <item
        android:id="@+id/navigation_client_upload"
        android:icon="@drawable/ic_file_download"
        android:title="@string/client_upload" />

</menu>
