<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/new_task_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:padding="4dp"
        android:textColor="@color/white"
        tools:text="@string/new_task_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/task_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/task_title"
            android:inputType="text"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
    I


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/task_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_grayoutline1"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat"
            android:gravity="top|start"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
    I


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/due_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:fontFamily="@font/montserrat"
            android:hint="@string/due_date"
            android:inputType="date"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>