<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/service_description_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:text="@string/service_description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/service_description_header">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/maven_pro_bold"
                android:padding="3dip"
                android:text="@string/service_package"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/service_package"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:padding="3dip"
                tools:text="Premium" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/maven_pro_bold"
                android:padding="3dip"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/package_description"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:padding="3dip"
                tools:text="Premium Packages" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginStart="8dp"
                android:fontFamily="@font/maven_pro_bold"
                android:padding="3dip"
                android:text="@string/mdtp_date"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:padding="3dip"
                tools:text="Tue, PPos" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/progress_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/work_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table" />

    <SeekBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/progress_header" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"
        tools:text="0%" />

</androidx.constraintlayout.widget.ConstraintLayout>